Add some additional tests and clean up method of executing commands.
- Add some tests to check that the tree structure of data collected is
  correct.
- Send commands as an array of strings instead of just a whitespace
  separated string.
- Fix bug causing PMSymbol entity to appear under the PMDso belonging
  to the wrong PMEvent when multiple PMDSos share the same name, but are
  from different events.
- Fix BZ #372413